# simple3-formatter

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
simple3_formatter/: __init__.py  simple3_formatter.py
src/s3fmt/: __init__.py  core.py
tests/: conftest.py  test_simple3_formatter.py
